src/objects/DER_Bundle_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>DER_API_URL__c</fullName>
        <label>DER API URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DER_Consumer_Key__c</fullName>
        <label>DER Consumer Key</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DER_Consumer_Secret__c</fullName>
        <label>DER Consumer Secret</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DER_Request_Timeout__c</fullName>
        <defaultValue>120000</defaultValue>
        <label>DER Request Timeout</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DER_Salesforce_Email__c</fullName>
        <label>DER Salesforce Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DER_Salesforce_Password__c</fullName>
        <label>DER Salesforce Password</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DER_Salesforce_Username__c</fullName>
        <label>DER Salesforce Username</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DER_Solar_Advantage_Campaign_Id__c</fullName>
        <label>DER Solar Advantage Campaign Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DES_Solar_Advantage_Outbound_Campaign_Id__c</fullName>
        <label>DES Solar Advantage Outbound Campaign Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DER Bundle Settings</label>
</CustomObject>